# MT_CONNECTOR

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  llms.txt  pyproject.toml  requirements.api.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: init_db.sql  install_poller.ps1
src/: __init__.py  config.py  dashboard.py  logging_config.py  metrics.py  poller_main.py
src/api/: app.py  client.py  schemas.py
src/api/middleware/: request_metrics.py
src/api/routes/: candles.py  coverage.py  custom_candles.py  health.py  spread.py  stats.py  symbols.py  ticks.py
src/api/services/: backfill_helper.py  validation.py
src/api/websocket/: manager.py  streams.py
src/db/: engine.py  init_timescale.py  repository.py
src/models/: candle.py  sync_state.py  tick.py
src/mt5/: aggregator.py  backfill.py  collector.py  connection.py  converters.py
src/redis_bus/: backfill_manager.py  pool.py  publisher.py  subscriber.py
tests/: __init__.py  conftest.py  test_config.py  test_converters.py  test_metrics.py  test_validation.py
