[project]
name = "mt5-connector"
version = "1.0.0"
description = "Production-grade MT5 market data connector with REST/WS API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (needed for FastAPI Depends)
    "UP007",  # Use X | Y for union (we already use it)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
